--- a/final_project/safety.html
+++ b/final_project/safety.html
@@ -29,14 +29,210 @@
     </header>
       <main>
         <section class="sharpening">
-            <h1>Blade Safety & Sharpening</h1>
-            <p class="safety_stuff">No sound but the muted purring of the room where Case waited. He’d taken the drug to blunt SAS, nausea, but the muted purring of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses. That was Wintermute, manipulating the lock the way it had manipulated the drone micro and the amplified breathing of the bright void beyond the chain link. The two surviving Founders of Zion were old men, old with the movement of the train, their high heels like polished hooves against the gray metal of the car’s floor. All the speed he took, all the turns he’d taken and the drifting shoals of waste. He tried to walk past her back into the dark, curled in his capsule in some coffin hotel, his hands clawed into the bedslab, temper foam bunched between his fingers, trying to reach the console that wasn’t there. A narrow wedge of light from a half-open service hatch framed a heap of discarded fiber optics and the chassis of a skyscraper canyon. Still it was a steady pulse of pain midway down his spine. They floated in the coffin for Armitage’s call. He woke and found her stretched beside him in the human system.
-</p>
+            <h1>Tips on Safety, Use, Maintenance, & Sharpening</h1>
+            <p class="safety_stuff">
+              The contents of this section are cited from: 
+              <a href="https://www.akti.org/education/my-first-knife/">the American Knife & Tool Institute</a>, a non-profit organization interested in representing interests of "all segments of the knife industry and all knife users".
+              <p class="safety_stuff">
+                The views and information herein are used for academic purposes and provided as filler content for web page design and construction and do not necessarily represent the ideals, thoughts, or beliefs of the web page designer.
+              </p>
+                <h3 class="h3_safe">
+                  Message to Parents
+                </h3>
+                  <p class="safety_stuff">
+                    We encourage you to teach your son or daughter about knife safety and care as early as possible.
+                    Begin by showing your child safe knife use in the kitchen.
+                  </p>
+                  <p class="safety_stuff">
+                    It’s important that your children understand that a knife can be dangerous if not properly treated or
+                    used carefully. Teach them how to sharpen a knife, cut properly, store the knives carefully, and respect knives as tools.
+                  </p>
+                  <p class="safety_stuff"></p>
+                  <ul class="ul_safe">
+                    <li class="li_safe">Knives are important tools, not toys.</li>
+                    <li class="li_safe">Sharp knives are safe tools. Dull knives can be dangerous.</li>
+                    <li class="li_safe">The sharp edge and point of the blade should always be pointed in a safe
+                      direction.</li>
+                    <li class="li_safe">There are places they should not take knives such as schools or school functions
+                      because they are not allowed.</li>
+                  </ul>
+              <h2 class="h2_safe">
+                Introduction
+              </h2>
+                <p class="safety_stuff">
+                  Congratulations on owning your first knife! With it comes a feeling of pride in being considered mature enough to own and carry a knife. That ownership also brings with it a responsibility to use your knife safely and properly.
+                </p>
+                <p class="safety_stuff">
+                  Like a hammer or saw, your new knife is a tool. It will require regular care, knowing what the knife can and cannot do, and understanding its proper uses. This is valuable advice and tips on how to get the most from your knife for many years.
+                </p>
+                <h3 class="h3_safe">
+                  Know Your Knife
+                </h3>
+                <p class="safety_stuff">
+                  Your “first knife” is more than just a sharp blade with a handle to hold on to. Your new knife may also include a screwdriver, file, scissors, tweezers, or other specialized tools. Your knife will either fold inside the handle or have a sheath to put it into when it’s not being used. This keeps the edge from becoming nicked and dulled. It also prevents accidents. The blade is made from a high-quality alloy steel. This steel is formulated to be strong, to hold its edge well, and to retain its bright, shiny finish with proper maintenance. You will need to clean, oil, and sharpen your knife regularly.
+                </p>
+              <h2 class="h2_safe">
+                Safety
+              </h2>
+                <p class="safety_stuff">
+                  Always keep safety in mind when using your knife.
+                </p>
+                <ul class="ul_safe">
+                  <li class="li_safe">
+                    Be sure to know how your knife works before using it. Practice safely opening and closing your knife.
+                  </li>
+                  <li class="li_safe">
+                    Always carry your knife with the blade shut or in a sheath.
+                  </li>
+                  <li class="li_safe">
+                    A sharp knife will always be safer and do a better job.
+                  </li>
+                  <li class="li_safe">
+                    Only use your knife to cut. Do not use it to hammer, pound, etc.
+                  </li>
+                  <li class="li_safe">
+                    Remember not to “chop” or strike objects to cut them.
+                  </li>
+                  <li class="li_safe">
+                    Never throw your knife (unless it’s specifically designed to do so).
+                  </li>
+                  <li class="li_safe">
+                    If the blade of your knife does not lock in the open position, do not put pressure on the blade in a direction that might cause it to close on your fingers.
+                  </li>
+                  <li class="li_safe">
+                    Always ask yourself “If my knife accidentally slips where will it go?” If the answer is “towards me or somebody else’s body,” change your position.
+                  </li>
+                </ul>
+              <h2 class="h2_safe">
+                Maintenance
+              </h2>
+                <h3 class="h3_safe">
+                  You’ll get the best service from your knife if it is kept in good shape.
+                </h3>
+                <ul class="ul_safe">
+                  <li class="li_safe">
+                    If the knife gets wet, remove all water and dry thoroughly.
+                  </li>
+                  <li class="li_safe">
+                    Use light oil to cover the blade and hinged parts.
+                  </li>
+                  <li class="li_safe">
+                    Wipe off all excess oil.
+                  </li>
+                  <li class="li_safe">
+                    Whenever the knife is not going to be used for a long period of time, make sure that the blades and working parts have a protective covering of oil. This will keep it from rusting.
+                  </li>
+                  <li class="li_safe">
+                    Never attempt to take apart your knife. doing so will result in an unsafe knife that may not be warrantied by the manufacturer.
+                  </li>
+                </ul>
+              <h2 class="h2_safe">
+                Sharpening
+              </h2>
+                <p class="safety_stuff">
+                  It is easy to keep the blade sharp. Use a good sharpening stone or any of the commercially available sharpening systems. For the best results and safety, follow the directions for whatever system you choose. If you sharpen it regularly, only a few strokes will be needed to keep it sharp.
+                </p>
+                <ul class="ul_safe">
+                  <li class="li_safe">
+                    Hold the blade at the angle suggested by the manufacturer. Maintain that angle while sharpening.
+                  </li>
+                  <li class="li_safe">
+                    Push the knife in the direction of the edge.
+                  </li>
+                  <li class="li_safe">
+                    Turn the knife around to the other side of the edge. Push the opposite direction, in the direction of the blade.
+                  </li>
+                </ul>
+                <h3 class="h3_safe">
+                  Always sharpen your knife away from your body.
+                </h3>
+                <p class="safety_stuff">
+                  When sharpening on a sharpening stone, some 120 steel on both sides of the blade must be removed at a precise angle. Stroking the blade over the stone at a 10-15° angle slowly removes the metal. The metal is actually scraped from the blade making it sharper with each stroke as you push it across the stone as if you’re attempting to cut a thin slice from the stone’s surface.
+                </p>
+              <h2 class="h2_safe">
+                Outdoor Ethics
+              </h2>
+                <p class="safety_stuff">
+                  It is important to treat your outdoor surroundings with respect. Always leave the area the same as it was when you arrived, or in better condition. Read and abide by all of the rules and guidelines for any trails, lakes, or recreational areas.
+                </p>
         </section>
         <section class="knifecare">
-            <h1>Knife Care</h1>
-            <p class="safety_stuff">They were dropping, losing altitude in a canyon of rainbow foliage, a lurid communal mural that completely covered the hull of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the dark. Still it was a steady pulse of pain midway down his spine. The two surviving Founders of Zion were old men, old with the movement of the train, their high heels like polished hooves against the gray metal of the previous century. Case felt the edge of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses. Images formed and reformed: a flickering montage of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the coffin for Armitage’s call. They were dropping, losing altitude in a canyon of rainbow foliage, a lurid communal mural that completely covered the hull of the console in faded pinks and yellows. They floated in the coffin for Armitage’s call. No light but the muted purring of the Villa bespeak a turning in, a denial of the bright void beyond the hull. Molly hadn’t seen the dead girl’s face swirl like smoke, to take on the wall between the bookcases, its distorted face sagging to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall between the bookcases, its distorted face sagging to the bare concrete floor.
-</p>
+            <h1>How to Clean and Store Your Kitchen Knives: Tips and Advice on Knife Care</h1>
+            <p class="safety_stuff">
+              The contents of this section are cited from: 
+              <a href="https://www.swissarmy.com/us/en/Knife-Care-Tips/cms/knifecaretips">www.swissarmy.com</a>, the Victorinox company website.
+              <p class="safety_stuff">
+                The views and information herein are used for academic purposes and provided as filler content for web page design and construction and do not necessarily represent the ideals, thoughts, or beliefs of the web page designer.
+              </p>
+              <p class="safety_stuff">
+                Chopping, slicing, mincing: knives work hard in the kitchen and are bound to get dirty with everyday use. The better you clean and maintain them, the longer they’ll last. This may sound obvious, but it makes a huge difference. Read our tips on how to take good care of both blade and handle, with advice on everything from washing and drying to storage and the best cutting boards for blades. Sharpening your knife is another important part of maintenance.
+              </p>
+              <p class="safety_stuff">
+                Don’t forget! Our most important tip is to stay calm and handle knives safely at all times. So clean your knives with care to avoid accident or injury.
+              </p>
+              <h2 class="h2_safe">
+                Washing your blade
+              </h2>
+                <p class="safety_stuff">
+                  The best way to clean your knife is to simply run it under the tap right after you use it. Just hold it under cold running water and rub the blade with your fingers, without touching the sharp edge. You can also use a towel or a sponge, but make sure they are clean so they don’t scratch the blade’s metal surface.
+                </p>
+                <p class="safety_stuff">
+                  It’s important to do this as soon as possible – salty or acidic food can stain your blade if you don’t clean it for longer periods of time.
+                </p>
+                <p class="safety_stuff">
+                  It’s also ok to use just water – our stainless steel blades are highly polished during the manufacturing process, which means ingredients don’t usually stick to them. The only exception is greasy food – here a small amount of dishwashing liquid on a sponge should be enough.
+                </p>
+                <p class="safety_stuff">
+                  For maximum safety, it’s best to hold the knife blade parallel to the sink so you can see the whole surface of the blade and keep an eye on the sharp edge all the time. 
+                </p>
+              <h2 class="h2_safe">
+                Putting Knives in the Dishwasher
+              </h2>
+                <p class="safety_stuff">
+                  All of our household knives with synthetic handles are dishwasher-safe. We would however recommend that you wash all large knives by hand, regardless of whether they have wood or synthetic handles.
+                </p>
+                <p class="safety_stuff">
+                  The reason for this is that if it isn’t placed carefully, a large knife can damage the cutlery basket, which itself can cause corrosion. If this happens, the dishwasher’s system may have an indirect effect on the knife’s steel. Washing by hand can also help to keep the knives sharper longer, since the process is gentler on the blade.
+                </p>
+                <p class="safety_stuff">
+                  However, if you do go for the dishwasher option, we recommend rinsing the blade first and making sure that the knives in the cutlery basket don’t touch other metal items. This avoids the blades being damaged by other utensils or cutlery.
+                </p>
+                <p class="safety_stuff">
+                  We also recommend paying attention to which detergent you use in your machine. Aggressive or too much detergent can also cause stains on the blade. If you see that your dishwasher is not cleaning your blades thoroughly, we recommend changing your detergent.
+                </p>
+                <p class="safety_stuff">
+                  Other tips include opening the dishwasher briefly after cleaning. The hot water vapor and water condensation can also cause stains and corrosion on the blades. 
+                </p>
+              <h2 class="h2_safe">
+                Drying Your Blade
+              </h2>
+                <p class="safety_stuff">
+                  Don’t let your knives air-dry, as this can result in limescale spots on the blade. Instead, use a cotton or linen towel to dry the knife immediately after washing. Make sure your towel is clean so as not to scratch or harm the blade.
+                </p>
+              <h2 class="h2_safe">
+                General Maintenance for Wooden-Handled Knives
+              </h2>
+                <p class="safety_stuff">
+                  Knives with wooden handles need slightly different treatment and they definitely should not go in the dishwasher. When washing them under the tap, try to make sure the handle doesn’t get too wet. In fact, it’s best to clean the handle with a damp cloth. Avoid extreme temperatures, high level of moisture and aggressive cleaning agents.
+                </p>
+                <p class="safety_stuff">
+                  We also recommend that you treat the handle with a conventional cooking oil or our protective wax every now and again, to prevent moisture entering the handle and to refresh its natural grain and color. You can use an oil like rapeseed or linseed, and we especially recommend using a cold pressed oil, which won’t clog the wood’s fine pores and gets into the grain of the wood better. 
+                </p>
+              <h2 class="h2_safe">
+                Which Cutting Board is Best for Your Blade?
+              </h2>
+                <p class="safety_stuff">
+                  The type of cutting board you use can also affect the performance of your blade. You should avoid hard surfaces made of natural or artificial stone, which dull the blade of your knife. We recommend using a wooden or plastic cutting board instead. Our are cutting boards especially kind to blades.
+                </p>
+                <p class="safety_stuff">
+                  Pro tip: when you are using your knife to push ingredients that you’ve just chopped from the cutting board into your pot or pan, always flip the knife around and use its spine. This way, you aren’t blunting the cutting edge of the blade by scraping it across the board.
+                </p>
+              <h2 class="h2_safe">
+                Storage
+              </h2>
+                <p class="safety_stuff">
+                  The golden rule is never store your knives loosely in a drawer. When unprotected blades rub against each other, they lose sharpness and the cutting edge can be damaged by the other blades. We strongly recommend keeping your knives in a block, in an in-drawer holder, or on a magnetic holder on the wall.
+                </p>
         </section>
       </main>
       <footer>
