--- a/final_project/index.html
+++ b/final_project/index.html
@@ -21,10 +21,10 @@
   <body>
     <header>
       <nav class="head_nav">
-            <a class="home_nav" href="/final_project/index.html" title="Home">Home</a>
-            <a class="gallery_nav" href="/final_project/gallery.html" title="Gallery">Gallery</a>
-            <a class="profiles_nav" href="/final_project/profiles.html" title="Profiles">Profiles</a>
-            <a class="care_nav" href="/final_project/safety.html" title="Safety, Sharpening, & Care">Safety, Sharpening, & Care</a>
+            <a class="home_nav" href="index.html" title="Home">Home</a>
+            <a class="gallery_nav" href="gallery.html" title="Gallery">Gallery</a>
+            <a class="profiles_nav" href="profiles.html" title="Profiles">Profiles</a>
+            <a class="care_nav" href="safety.html" title="Safety, Sharpening, & Care">Safety, Sharpening, & Care</a>
           </nav>
       </header>
       <main class="main_home">
@@ -35,15 +35,15 @@
         <aside class="aside_home">
             <h1>Profile Links</h1>
             <ul >
-                <li class="li_home"><a href="/final_project/profiles.html#first_knife">My First Knife</a></li>
-                <li class="li_home"><a href="/final_project/profiles.html#brasil">Brazilian Souvenir</a></li>
-                <li class="li_home"><a href="/final_project/profiles.html#firstbuy">First Purchase for Myself</a></li>
-                <li class="li_home"><a href="/final_project/profiles.html#forged">Forged By Me</a></li>
-                <li class="li_home"><a href="/final_project/profiles.html#huntkit">Hunting Knife from a Kit</a></li>
-                <li class="li_home"><a href="/final_project/profiles.html#rusty">Restored Hunting Knife</a></li>
-                <li class="li_home"><a href="/final_project/profiles.html#newest">My Latest</a></li>
-                <li class="li_home"><a href="/final_project/profiles.html#machete">Watermelon Slicer</a></li>
-                <li class="li_home"><a href="/final_project/profiles.html#pioneer">Swiss Army Pioneer</a></li>
+                <li class="li_home"><a href="profiles.html#first_knife">My First Knife</a></li>
+                <li class="li_home"><a href="profiles.html#brasil">Brazilian Souvenir</a></li>
+                <li class="li_home"><a href="profiles.html#firstbuy">First Purchase for Myself</a></li>
+                <li class="li_home"><a href="profiles.html#forged">Forged By Me</a></li>
+                <li class="li_home"><a href="profiles.html#huntkit">Hunting Knife from a Kit</a></li>
+                <li class="li_home"><a href="profiles.html#rusty">Restored Hunting Knife</a></li>
+                <li class="li_home"><a href="profiles.html#newest">My Latest</a></li>
+                <li class="li_home"><a href="profiles.html#machete">Watermelon Slicer</a></li>
+                <li class="li_home"><a href="profiles.html#pioneer">Swiss Army Pioneer</a></li>
               </ul>
         </aside>
         <form action="/my-handling-form-page" method="post">
