--- a/final_project/safety.html
+++ b/final_project/safety.html
@@ -21,10 +21,10 @@
   <body>
     <header>
       <nav class="head_nav">
-        <a class="home_nav" href="/final_project/index.html" title="Home">Home</a>
-        <a class="gallery_nav" href="/final_project/gallery.html" title="Gallery">Gallery</a>
-        <a class="profiles_nav" href="/final_project/profiles.html" title="Profiles">Profiles</a>
-        <a class="care_nav" href="/final_project/safety.html" title="Safety, Sharpening, & Care">Safety, Sharpening, & Care</a>
+        <a class="home_nav" href="index.html" title="Home">Home</a>
+        <a class="gallery_nav" href="gallery.html" title="Gallery">Gallery</a>
+        <a class="profiles_nav" href="profiles.html" title="Profiles">Profiles</a>
+        <a class="care_nav" href="safety.html" title="Safety, Sharpening, & Care">Safety, Sharpening, & Care</a>
       </nav>
     </header>
       <main>
