--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -23,33 +23,69 @@
       <nav class="head_nav">
         <a class="home_nav" href="index.html" title="Home">Home</a>
         <a class="gallery_nav" href="gallery.html" title="Gallery">Gallery</a>
-        <a class="profiles_nav" href="profiles.html" title="Profiles">Profiles</a>
-        <a class="care_nav" href="safety.html" title="Safety, Sharpening, & Care">Safety, Sharpening, & Care</a>
+        <a class="profiles_nav" href="profiles.html" title="Profiles"
+          >Profiles</a
+        >
+        <a
+          class="care_nav"
+          href="safety.html"
+          title="Safety, Sharpening, & Care"
+          >Safety, Sharpening, & Care</a
+        >
       </nav>
     </header>
-      <main>
-        <div class="gallery">
-          <a class="gal" href="profiles.html#first_knife"><img src="fp_images/firstknife_150351.png" alt="My first knife.">
-            <div class="label_gallery">My First Knife</div></a>
-          <a class="gal" href="profiles.html#brasil"><img src="fp_images/brasilmemento_150304.png" alt="Souvenir from Brazil">
-            <div class="label_gallery">Brazilian Souvenir</div></a>
-          <a class="gal" href="profiles.html#firstbuy"><img src="fp_images/firstpurchased_150827.png" alt="First Purchase for Myself">
-            <div class="label_gallery">My 1<sup>st</sup> Purchase</div></a>
-          <a class="gal" href="profiles.html#forged"><img src="fp_images/forged_145014.png" alt="Forged By Me">
-            <div class="label_gallery">Forged By Me</div></a>
-          <a class="gal" href="profiles.html#huntkit"><img src="fp_images/hunterkit_145005.png" alt="Hunting Knife from a Kit">
-            <div class="label_gallery">Hunting Knife from a Kit</div></a>
-          <a class="gal" href="profiles.html#rusty"><img src="fp_images/hunterrefurbished_150801.png" alt="Restored Hunting Knife">
-            <div class="label_gallery">Restored Hunting Knife</div></a>
-          <a class="gal" href="profiles.html#newest"><img src="fp_images/latestpurchase_151058.png" alt="My Latest">
-            <div class="label_gallery">My Latest</div></a>
-          <a class="gal" href="profiles.html#machete"><img src="fp_images/machete_144547.png" alt="Watermelon Slicer">
-            <div class="label_gallery">Watermelon Slicer</div></a>
-          <a class="gal" href="profiles.html#pioneer"><img src="fp_images/swisspioneer_145503.png" alt="Pioneer">
-            <div class="label_gallery">Swiss Army Pioneer</div></a>
-        </div>
-      </main>
-      <footer>
-        &copy; Matt Ogden, 2021
-      </footer>
+    <main>
+      <div class="gallery">
+        <a class="gal" href="profiles.html#first_knife"
+          ><img src="fp_images/firstknife_150351.png" alt="My first knife." />
+          <div class="label_gallery">My First Knife</div></a
+        >
+        <a class="gal" href="profiles.html#brasil"
+          ><img
+            src="fp_images/brasilmemento_150304.png"
+            alt="Souvenir from Brazil"
+          />
+          <div class="label_gallery">Brazilian Souvenir</div></a
+        >
+        <a class="gal" href="profiles.html#firstbuy"
+          ><img
+            src="fp_images/firstpurchased_150827.png"
+            alt="First Purchase for Myself"
+          />
+          <div class="label_gallery">My 1<sup>st</sup> Purchase</div></a
+        >
+        <a class="gal" href="profiles.html#forged"
+          ><img src="fp_images/forged_145014.png" alt="Forged By Me" />
+          <div class="label_gallery">Forged By Me</div></a
+        >
+        <a class="gal" href="profiles.html#huntkit"
+          ><img
+            src="fp_images/hunterkit_145005.png"
+            alt="Hunting Knife from a Kit"
+          />
+          <div class="label_gallery">Hunting Knife from a Kit</div></a
+        >
+        <a class="gal" href="profiles.html#rusty"
+          ><img
+            src="fp_images/hunterrefurbished_150801.png"
+            alt="Restored Hunting Knife"
+          />
+          <div class="label_gallery">Refurbished Hunting Knife</div></a
+        >
+        <a class="gal" href="profiles.html#newest"
+          ><img src="fp_images/latestpurchase_151058.png" alt="My Latest" />
+          <div class="label_gallery">My Latest</div></a
+        >
+        <a class="gal" href="profiles.html#machete"
+          ><img src="fp_images/machete_144547.png" alt="Watermelon Slicer" />
+          <div class="label_gallery">Watermelon Slicer</div></a
+        >
+        <a class="gal" href="profiles.html#pioneer"
+          ><img src="fp_images/swisspioneer_145503.png" alt="Pioneer" />
+          <div class="label_gallery">Swiss Army Pioneer</div></a
+        >
+      </div>
+    </main>
+    <footer>&copy; Matt Ogden, 2021</footer>
   </body>
+</html>
