--- a/final_project/index.html
+++ b/final_project/index.html
@@ -40,7 +40,7 @@
                 <li class="li_home"><a href="profiles.html#firstbuy">First Purchase for Myself</a></li>
                 <li class="li_home"><a href="profiles.html#forged">Forged By Me</a></li>
                 <li class="li_home"><a href="profiles.html#huntkit">Hunting Knife from a Kit</a></li>
-                <li class="li_home"><a href="profiles.html#rusty">Restored Hunting Knife</a></li>
+                <li class="li_home"><a href="profiles.html#rusty">Refurbished Hunting Knife</a></li>
                 <li class="li_home"><a href="profiles.html#newest">My Latest</a></li>
                 <li class="li_home"><a href="profiles.html#machete">Watermelon Slicer</a></li>
                 <li class="li_home"><a href="profiles.html#pioneer">Swiss Army Pioneer</a></li>
