--- a/final_project/safety.html
+++ b/final_project/safety.html
@@ -231,7 +231,7 @@
                 Storage
               </h2>
                 <p class="safety_stuff">
-                  The golden rule is never store your knives loosely in a drawer. When unprotected blades rub against each other, they lose sharpness and the cutting edge can be damaged by the other blades. We strongly recommend keeping your knives in a block, in an in-drawer holder, or on a magnetic holder on the wall.
+                  The golden rule is never store your knives loosely in a drawer. When unprotected blades rub against each other, they lose sharpness and the cutting edge can be damaged by the other blades. We strongly recommend keeping your knives in a block, an in-drawer holder, or on a magnetic holder on the wall.
                 </p>
         </section>
       </main>
