--- a/final_project/index.html
+++ b/final_project/index.html
@@ -46,7 +46,7 @@
                 <li class="li_home"><a href="profiles.html#pioneer">Swiss Army Pioneer</a></li>
               </ul>
         </aside>
-        <form action="/my-handling-form-page" method="post">
+        <form action="https://www.google.com/" >
             <fieldset>
                 <legend>Would you like give your opinion in the debate on fixed blades vs. folders? Let's hear what you have to say!</legend>
 
