--- a/final_project/profiles.html
+++ b/final_project/profiles.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Open+Sans:wght@300;400&family=Pacifico&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Pacifico&display=swap"
       rel="stylesheet"
     />
 
@@ -42,7 +42,7 @@
         <a class="anchor" id="first_knife"></a>
         <img
           class="profile_pic"
-          src="fp_images/firstknife_150351.png"
+          src="fp_images/firstknife_2.webp"
           alt="My first knife."
         />
         <div class="profile_div">
@@ -88,7 +88,7 @@
         <a class="anchor" id="brasil"></a>
         <img
           class="profile_pic"
-          src="fp_images/brasilmemento_150304.png"
+          src="fp_images/brasilmemento_2a.webp"
           alt="Brazilian souvenir."
         />
         <div class="profile_div">
@@ -132,7 +132,7 @@
         <a class="anchor" id="firstbuy"></a>
         <img
           class="profile_pic"
-          src="fp_images/firstpurchased_150827.png"
+          src="fp_images/firstpurchased_2.webp"
           alt="My first purchase."
         />
         <div class="profile_div">
@@ -184,7 +184,7 @@
         <a class="anchor" id="forged"></a>
         <img
           class="profile_pic"
-          src="fp_images/forged_145014.png"
+          src="fp_images/forged_2.webp"
           alt="My first knife."
         />
         <div class="profile_div">
@@ -226,7 +226,7 @@
         <a class="anchor" id="huntkit"></a>
         <img
           class="profile_pic"
-          src="fp_images/hunterkit_145005.png"
+          src="fp_images/hunterkit_2.webp"
           alt="My first knife."
         />
         <div class="profile_div">
@@ -285,7 +285,7 @@
         <a class="anchor" id="rusty"></a>
         <img
           class="profile_pic"
-          src="fp_images/hunterrefurbished_150801.png"
+          src="fp_images/hunterrefurbished_2.webp"
           alt="My first knife."
         />
         <div class="profile_div">
@@ -329,7 +329,7 @@
         <a class="anchor" id="newest"></a>
         <img
           class="profile_pic"
-          src="fp_images/latestpurchase_151058.png"
+          src="fp_images/latestpurchase_2.webp"
           alt="My first knife."
         />
         <div class="profile_div">
@@ -376,7 +376,7 @@
         <a class="anchor" id="machete"></a>
         <img
           class="profile_pic"
-          src="fp_images/machete_144547.png"
+          src="fp_images/machete_3.webp"
           alt="My first knife."
         />
         <div class="profile_div">
@@ -421,7 +421,7 @@
         <a class="anchor" id="pioneer"></a>
         <img
           class="profile_pic"
-          src="fp_images/swisspioneer_145503.png"
+          src="fp_images/swisspioneer_2.webp"
           alt="My first knife."
         />
         <div class="profile_div">
