--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Open+Sans:wght@300;400&family=Pacifico&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Pacifico&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -37,51 +37,51 @@
     <main>
       <div class="gallery">
         <a class="gal" href="profiles.html#first_knife"
-          ><img src="fp_images/firstknife_150351.png" alt="My first knife." />
+          ><img src="fp_images/firstknife_2.webp" alt="My first knife." />
           <div class="label_gallery">My First Knife</div></a
         >
         <a class="gal" href="profiles.html#brasil"
           ><img
-            src="fp_images/brasilmemento_150304.png"
+            src="fp_images/brasilmemento_2a.webp"
             alt="Souvenir from Brazil"
           />
           <div class="label_gallery">Brazilian Souvenir</div></a
         >
         <a class="gal" href="profiles.html#firstbuy"
           ><img
-            src="fp_images/firstpurchased_150827.png"
+            src="fp_images/firstpurchased_2.webp"
             alt="First Purchase for Myself"
           />
           <div class="label_gallery">My 1<sup>st</sup> Purchase</div></a
         >
         <a class="gal" href="profiles.html#forged"
-          ><img src="fp_images/forged_145014.png" alt="Forged By Me" />
+          ><img src="fp_images/forged_2.webp" alt="Forged By Me" />
           <div class="label_gallery">Forged By Me</div></a
         >
         <a class="gal" href="profiles.html#huntkit"
           ><img
-            src="fp_images/hunterkit_145005.png"
+            src="fp_images/hunterkit_2.webp"
             alt="Hunting Knife from a Kit"
           />
           <div class="label_gallery">Hunting Knife from a Kit</div></a
         >
         <a class="gal" href="profiles.html#rusty"
           ><img
-            src="fp_images/hunterrefurbished_150801.png"
+            src="fp_images/hunterrefurbished_2.webp"
             alt="Restored Hunting Knife"
           />
           <div class="label_gallery">Refurbished Hunting Knife</div></a
         >
         <a class="gal" href="profiles.html#newest"
-          ><img src="fp_images/latestpurchase_151058.png" alt="My Latest" />
+          ><img src="fp_images/latestpurchase_2.webp" alt="My Latest" />
           <div class="label_gallery">My Latest</div></a
         >
         <a class="gal" href="profiles.html#machete"
-          ><img src="fp_images/machete_144547.png" alt="Watermelon Slicer" />
+          ><img src="fp_images/machete_3.webp" alt="Watermelon Slicer" />
           <div class="label_gallery">Watermelon Slicer</div></a
         >
         <a class="gal" href="profiles.html#pioneer"
-          ><img src="fp_images/swisspioneer_145503.png" alt="Pioneer" />
+          ><img src="fp_images/swisspioneer_2.webp" alt="Pioneer" />
           <div class="label_gallery">Swiss Army Pioneer</div></a
         >
       </div>
