push mon 12/14 eve

--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -36,51 +36,51 @@
     </header>
     <main>
       <div class="gallery">
-        <a class="gal" href="profiles.html#first_knife"
+        <a class="gal" href="profiles.html#first_knife id="first_knife""
           ><img src="fp_images/firstknife_2.webp" alt="My first knife." />
           <div class="label_gallery">My First Knife</div></a
         >
-        <a class="gal" href="profiles.html#brasil"
+        <a class="gal" href="profiles.html#brasil" id="brasil"
           ><img
             src="fp_images/brasilmemento_2a.webp"
             alt="Souvenir from Brazil"
           />
           <div class="label_gallery">Brazilian Souvenir</div></a
         >
-        <a class="gal" href="profiles.html#firstbuy"
+        <a class="gal" href="profiles.html#firstbuy" id="firstbuy"
           ><img
             src="fp_images/firstpurchased_2.webp"
             alt="First Purchase for Myself"
           />
           <div class="label_gallery">My 1<sup>st</sup> Purchase</div></a
         >
-        <a class="gal" href="profiles.html#forged"
+        <a class="gal" href="profiles.html#forged" id="forged"
           ><img src="fp_images/forged_2.webp" alt="Forged By Me" />
           <div class="label_gallery">Forged By Me</div></a
         >
-        <a class="gal" href="profiles.html#huntkit"
+        <a class="gal" href="profiles.html#huntkit" id="huntkit"
           ><img
             src="fp_images/hunterkit_2.webp"
             alt="Hunting Knife from a Kit"
           />
           <div class="label_gallery">Hunting Knife from a Kit</div></a
         >
-        <a class="gal" href="profiles.html#rusty"
+        <a class="gal" href="profiles.html#rusty" id="rusty"
           ><img
             src="fp_images/hunterrefurbished_2.webp"
             alt="Restored Hunting Knife"
           />
           <div class="label_gallery">Refurbished Hunting Knife</div></a
         >
-        <a class="gal" href="profiles.html#newest"
+        <a class="gal" href="profiles.html#newest" id="newest"
           ><img src="fp_images/latestpurchase_2.webp" alt="My Latest" />
           <div class="label_gallery">My Latest</div></a
         >
-        <a class="gal" href="profiles.html#machete"
+        <a class="gal" href="profiles.html#machete" id="machete"
           ><img src="fp_images/machete_3.webp" alt="Watermelon Slicer" />
           <div class="label_gallery">Watermelon Slicer</div></a
         >
-        <a class="gal" href="profiles.html#pioneer"
+        <a class="gal" href="profiles.html#pioneer" id="pioneer"
           ><img src="fp_images/swisspioneer_2.webp" alt="Pioneer" />
           <div class="label_gallery">Swiss Army Pioneer</div></a
         >
