--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -36,7 +36,7 @@
     </header>
     <main>
       <div class="gallery">
-        <a class="gal" href="profiles.html#first_knife id="first_knife""
+        <a class="gal" href="profiles.html#first_knife" id=first_knife
           ><img src="fp_images/firstknife_2.webp" alt="My first knife." />
           <div class="label_gallery">My First Knife</div></a
         >
